postcss/tests/testData/inspections/customSelectors/customSelectorWithoutDashes.pcss
:<error descr="Unknown pseudo selector '-button'">-button</error> {
}